# text-extractor

./: .gitignore  README.md  pyproject.toml
