[project]
name = "text-extractor"
version = "0.1.0"
description = "Extract content and metadata from text files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
text-extractor = "text_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_extractor"]
